test/types/tuple/diten/badTupleExpandInMain.good
badTupleExpandInMain.chpl:1: In function 'main':
badTupleExpandInMain.chpl:4: error: illegal tuple expansion context
